Change to jdk 1.8